--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     
     <div class="container">
-        <img src="profile.jpg" alt="Thant Thiri Maung">
+        <img src="D:\my_portfolio\thantthirimaung.github.io\photos\thant_photo.jpg" alt="Thant Thiri Maung">
         <p>Welcome to my portfolio. Explore my projects, experience, and achievements.</p>
         <nav>
             <a href="about.html">About Me</a>
